--- a/index.html
+++ b/index.html
@@ -30,19 +30,38 @@
   <script>
     const API = "/api/expenses";
     const list = document.getElementById("list");
-    let currentExpenses = []; // Array per memorizzare le spese correnti
+    let currentExpenses = [];
+
+    // Riferimenti agli elementi del form per l'accesso sicuro
+    const descriptionInput = document.getElementById("description");
+    const amountInput = document.getElementById("amount");
+    const categoryInput = document.getElementById("category");
+    const dateInput = document.getElementById("date");
 
     // 1. Funzione per caricare le spese dal backend
     async function loadExpenses() {
-      const res = await fetch(API);
-      const { expenses } = await res.json();
-      currentExpenses = expenses; // Aggiorna le spese correnti
-      render(expenses);
+      try {
+            const res = await fetch(API);
+            if (!res.ok) {
+                console.error("Errore nel caricamento delle spese:", res.statusText);
+                return;
+            }
+            const { expenses } = await res.json();
+            currentExpenses = expenses || []; 
+            render(currentExpenses);
+        } catch (error) {
+            console.error("Errore di rete durante il caricamento:", error);
+        }
     }
 
     // 2. Funzione per renderizzare la lista
     function render(expenses) {
       list.innerHTML = "";
+        if (expenses.length === 0) {
+            list.innerHTML = "<li>Nessuna spesa registrata.</li>";
+            return;
+        }
+
       expenses.forEach(exp => {
         const li = document.createElement("li");
         li.innerHTML = `
@@ -64,25 +83,28 @@
     // 3. Gestore per l'aggiunta di una nuova spesa (POST)
     document.getElementById("expenseForm").addEventListener("submit", async (e) => {
       e.preventDefault();
-
+        
+        // **UTILIZZO DEI RIFERIMENTI DOM SICURI**
       const expense = {
-        description: description.value,
-        amount: amount.value,
-        category: category.value,
-        date: date.value
+        description: descriptionInput.value,
+        amount: amountInput.value,
+        category: categoryInput.value,
+        date: dateInput.value
       };
 
-      await fetch(API, {
+      const postRes = await fetch(API, {
         method: "POST",
         headers: { "Content-Type": "application/json" },
         body: JSON.stringify(expense)
       });
-
-      // Pulisce il form
-      description.value = "";
-      amount.value = "";
-      category.value = "";
-      date.value = "";
+      
+      if (postRes.ok) {
+        // Pulisce il form solo se la richiesta ha avuto successo
+        descriptionInput.value = "";
+        amountInput.value = "";
+        categoryInput.value = "";
+        dateInput.value = "";
+      }
 
       loadExpenses(); // Ricarica la lista per mostrare la nuova spesa
     });
@@ -93,13 +115,12 @@
 
       if (!existingExpense) return;
 
-      // Usa il valore esistente come default per il prompt
       const newDescription = prompt("Descrizione:", existingExpense.description);
       const newAmount = prompt("Importo:", existingExpense.amount);
       const newCategory = prompt("Categoria:", existingExpense.category);
       const newDate = prompt("Data (YYYY-MM-DD):", existingExpense.date);
 
-      // Se l'utente preme Annulla (null) o lascia vuoto, usiamo il vecchio valore
+      // Usa i valori esistenti se il prompt è annullato (null) o vuoto
       const updateBody = {
         description: newDescription !== null && newDescription !== "" ? newDescription : existingExpense.description,
         amount: newAmount !== null && newAmount !== "" ? newAmount : existingExpense.amount,
