--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 
                 <!-- Amount -->
                 <div>
-                    <label class="block text-sm font-medium text-slate-600 mb-1">Amount ($)</label>
+                    <label class="block text-sm font-medium text-slate-600 mb-1">Amount (€)</label>
                     <input type="number" id="amountInput" placeholder="0.00" step="0.01" required
                         class="w-full px-4 py-2 rounded-lg border border-slate-300 focus:ring-2 focus:ring-blue-500 focus:border-blue-500 outline-none transition">
                 </div>
